fix: route all ai-services API calls through Vercel proxy to resolve CORS

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "destination": "https://ai.block8910.com/api/dev/:path*"
     },
     {
+      "source": "/proxy-ai-services/:path*",
+      "destination": "https://tastevn-ai-services.ig3.ai/:path*"
+    },
+    {
       "source": "/proxy-raw-meat/:path*",
       "destination": "http://171.244.46.137:9001/raw-meat/:path*"
     }
