--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
