--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx @cloudflare/next-on-pages build",
+    "build": "npm install @cloudflare/next-on-pages@latest",
     "start": "next start",
     "lint": "next lint"
   },
